/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 import "ukama/roles.proto";
 option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";
 import "validator.proto";
 package ukama.events.v1;

 message AddMemberEventRequest{
    string orgId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
    string memberId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    string userId = 3 [json_name = "user_id", (validator.field) = {uuid_ver: 4, string_not_empty: true}];
    ukama.common.v1.RoleType role = 4 ;
    bool isDeactivated = 5 [json_name = "is_deactivated"];
    string created_at = 6 [json_name = "member_since"];
}

message UpdateMemberEventRequest{
    string orgId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
    string userId = 2 [json_name = "user_id", (validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string memberId = 3 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    bool isDeactivated = 4 [json_name = "is_deactivated"];
}

message DeleteMemberEventRequest{
    string orgId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
    string memberId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    string userId = 3 [json_name = "user_id", (validator.field) = {uuid_ver: 4, string_not_empty: true}];
}
